welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:2: error: Missing closing brace `}' assumed here
var cpt = 0;
^Diagonal:3: error: expected start of definition
override def run() {
         ^