welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0
var cpt = 0;
override def run() {
	for (i <- 1 to 7){
		for (i <- 1 to diag){
			cpt=cpt+1
			ecritMessage(cpt)
			setPos(getX()+1, getY()-1)
		}
		ecritMessage(cpt)
		setPos(0, getY()+diag+1)
		diag=diag+1
	}
	for (i <- 1 to 7){
		for (i <- 1 to diag){
			cpt=cpt+1
			ecritMessage(cpt)
			setPos(getX()+1, getY()-1)
		}
		ecritMessage(cpt)
		setPos(0, getY()+diag+1)
		diag=diag+1
}
